@@ -1,6 +1,7 @@
 // URL(Uniform Resource Locator) - URL을 다루는 클래스
 package com.eomcs.net.ex07;
 
+import java.net.URI;
 import java.net.URL;
 
 public class Exam01 {
@@ -16,14 +17,21 @@ public class Exam01 {
     //
     // 자원
     // - 정적 자원(static)
-    //   - 요청할 때 마다 결과 콘텐트가 변경되지 않는 자원. 즉 파일을 가리킨다.
-    //   - 예) HTML, GIF, JPEG, PNG, CSS, JavaScript, TXT 등의 파일
+    // - 요청할 때 마다 결과 콘텐트가 변경되지 않는 자원. 즉 파일을 가리킨다.
+    // - 예) HTML, GIF, JPEG, PNG, CSS, JavaScript, TXT 등의 파일
     // - 동적 자원(dynamic)
-    //   - 요청할 때 마다 결과 콘텐트가 변할 수 있는 자원. 
-    //   - 메일 조회, 게시물 변경, 주문 등의 웹 프로그램을 가리킨다.
-    //   - 예) index.php, index.jsp, /board/list 등
+    // - 요청할 때 마다 결과 콘텐트가 변할 수 있는 자원.
+    // - 메일 조회, 게시물 변경, 주문 등의 웹 프로그램을 가리킨다.
+    // - 예) index.php, index.jsp, /board/list 등
     //
-    URL url = new URL("https://search.naver.com:443/search.naver?where=nexearch&sm=top_hty&fbm=1&ie=utf8&query=bitcamp");
+    // version : java19까지
+    // URL url = new
+    // URL("https://search.naver.com:443/search.naver?where=nexearch&sm=top_hty&fbm=1&ie=utf8&query=bitcamp");
+
+    // version : java20부터
+    URL url = new URI(
+        "https://search.naver.com:443/search.naver?where=nexearch&sm=top_hty&fbm=1&ie=utf8&query=bitcamp")
+            .toURL();
 
     // URL 분석
     System.out.printf("프로토콜: %s\n", url.getProtocol());
